modified and test for newfeature.

--- a/templates/default/redis-server.erb
+++ b/templates/default/redis-server.erb
@@ -14,7 +14,7 @@
 
 PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
 DAEMON=<%= @redis_server_path %>
-DAEMON_ARGS=<%= @redis_server_conf_path %>
+DAEMON_ARGS=<%= @redis_conf_path %>
 NAME=redis-server
 DESC=redis-server
 PIDFILE=/var/run/redis.pid
